2004-03-12  Sebastien Pouliot  <sebastien@ximian.com>

	* Signature.cs: KeyInfo isn't required in schema.
	* SignedInfo.cs: Added support for missing HMACOutputLength.
	* SignedXml.cs: Added support to download a reference (experimental).
	Now throw exception for unknown hash algorithm or canonicalization 
	methods. Changed GetPublicKey to iterate all available keys (not just
	the first one).

2004-03-09  Atsushi Enomoto <atsushi@ximian.com>

	* KeyInfo.cs : Attribute Id was not handlded.
	* KeyInfoX509Data.cs : all array members return null when there are
	  no such contents. Just find child elements, not descendants.
	* SignedXml.cs : key is not always required when CheckSignature() is
	  called.
	* XmlDsigXsltTransform.cs : LoadInput should allow node list.
	* XmlSignature.cs : added GetChildElements().

2004-03-09  Atsushi Enomoto <atsushi@ximian.com>

	* KeyInfoX509Data.cs : trivial local var name fix.

2004-03-09  Atsushi Enomoto <atsushi@ximian.com>

	* KeyInfoX509Data.cs,
	  Reference.cs,
	  SignedInfo.cs,
	  XmlSignature.cs : GetElementsByTagName() should be eliminated or
	  at least should use namespace URI.

2004-03-04  Atsushi Enomoto <atsushi@ximian.com>

	* KeyInfo.cs :
	  Fixed LoadXml() to skip text nodes as MS.NET does.
	  Uncommented out RSAKeyValue.
	* Signature.cs : Fixed LoadXml(). Don't use GetElementsByTagName()
	  that incorrectly acquires descendants. Throw CryptographicException
	  if required elements were not found.
	* Transform.cs : added internal GetResolver().
	* XmlDsigXPathTransform.cs,
	  XmlDsigXsltTransform.cs : use XmlResolver.

2004-02-19  Tim Coleman <tim@timcoleman.com>
	* SymmetricKeyWrap.cs:
		Add AES Key Wrap
	* EncryptedXml.cs:
		Add calls to SymmetricKeyWrap

2004-02-11  Sebastien Pouliot  <sebastien@ximian.com>

	* Reference.cs: Added LoadInnerXml to transforms. Removed unused 
	variable.
	* Transform.cs: Import GetInnerXml in GetXml.
	* XmlDsigBase64Transform.cs: Now use a StreamWriter to avoid multiple
	allocations.